@@ -47,6 +47,7 @@ Version 1.4.5 - CVS
   - Fixed bug #1124764, view unsafe images inside printer friendly view.
   - Fixed bug #1032366, remove NUL characters in text attachments on sent.
   - Re-introduced mailto: handling.
+  - Removed INBOX as a mailbox option in filters plugin.  Fixes bug #801060.
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
